# LetUenforskills

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  anatomy.claude.example.yaml  anatomy.config.example.yaml  anatomy.deepseek.example.yaml  anatomy.deepseek.flash.github.yaml  anatomy.deepseek.flash.local.yaml  anatomy.deepseek.pro.github.yaml  anatomy.deepseek.pro.local.yaml  anatomy.moonshot.example.yaml  anatomy.openai.example.yaml  anatomy.qwen.example.yaml  anatomy.smoke.github.yaml  package-lock.json  package.json  pyproject.toml  sources.deepseek.github.yaml  sources.example.yaml  sources.github.example.yaml  sources.smoke.github.yaml
.github/: FUNDING.yml  pull_request_template.md
benchmark/: matrix.example.yaml
docs/: acceptance-checklist.md  agent-protocol.md  architecture.md  benchmark-spec.md  cloudflare-pages-deploy.md  dashboard-roadmap.md  decomposition-manual-spec.md  deepseek-v4pro-evaluation-optimization-plan.md  demo-fixtures.md  evidence-spec.md  fork-ready-guide.md  graph-data-surface-spec.md  harness-spec.md  implementation-plan.md  landing-page-spec.md  letuen-anchor-composition-planner-spec.md  letuen-anchor-schema.md  letuen-capability-evaluation-plan.md  letuen-composition-forms.md  letuen-harness-integration-spec.md  letuen-lightweight-profile.md  letuen-non-destructive-invocation-policy.md  letuen-skill-anchor-pack-design.md  letuen-skill-anchor-pack-roadmap.md  letuen-usage-guide.md  llm-skill-integration-design.md  llm-skill-runtime-design.md  meta-skills-design.md  model-comparison-protocol.md  (+15 more)
(+163 files in other folders)
